# DP_UserBot

./: .dockerignore  .env.dist  .gitignore  Dockerfile  app.py  docker-compose.yml  fly.toml  msg_ex.txt  pyproject.toml  redis_flush.py  redis_sess_gen.py  refresh_redis_json.py  requirements.txt  retrans.json.example
.github/workflows/: fly.yml
DP_UserBot/: .env  app.py  retrans.json
DP_UserBot/userbot/: config.py
DP_UserBot/userbot/handlers/: retrans.py
DP_UserBot/userbot/sessions/: redis_flush.py  redis_json.py  redis_sess_gen.py
pythonProject1/: Test.py  Test2.py  my_account.session
script_retrans/: main.py
userbot/: app_init.py  config.py
userbot/handlers/: resend_helpers.py  retrans.py
userbot/sessions/: pyroredis.py  redis_json.py  redis_sess_gen.py
